--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.11.5",
-     "@google/generative-ai": "^0.3.0"
+     "@google/generative-ai": "^0.3.0",
+    "cors": "^2.8.5"
    
   }
 }
