--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-DATABASE_URL=postgresql://postgres:GvfImIKKooesYZYcGkZLITEpSZvgaDWw@yamabiko.proxy.rlwy.net:34350/railway
+# DATABASE_URL=postgresql://postgres:vgFpGPvPGlPaHcTFdienLfdnppGRTjCb@mainline.proxy.rlwy.net:38920/railway
+DATABASE_URL=postgresql://postgres:ORlHZqqyEyKstVEUnnPvNfOPVTQYGEmC@mainline.proxy.rlwy.net:59313/railway
+
+GEMINI_API_KEY=AIzaSyD9JQaC45DVjwaWWKEn6lhPT94rEnTX4BM
