--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "vercel-postgres-test",
+  "name": "smart_swap",
   "version": "1.0.0",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "pg": "^8.11.5",
-     "@google/generative-ai": "^0.3.0",
-    "cors": "^2.8.5"
-   
+    "@google/generative-ai": "^0.24.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "openai": "^6.10.0",
+    "pg": "^8.16.3"
   }
 }
